@@ -55,6 +55,45 @@
 #include <dwarf.h>
 #include "libdwP.h"
 
+internal_function unsigned char *
+__libdw_read_udata_addr (Dwarf_Attribute *attr, int sec_index,
+			 int err_nodata, unsigned char **endpp)
+{
+  if (attr == NULL)
+    return NULL;
+
+  Dwarf_Word offset;
+  switch (attr->form)
+    {
+    case DW_FORM_data4:
+    case DW_FORM_data8:
+      if (__libdw_read_address (attr->cu->dbg, IDX_debug_info, attr->valp,
+				attr->form == DW_FORM_data4 ? 4 : 8,
+				&offset))
+	return NULL;
+      break;
+
+    default:
+      __libdw_seterrno (DWARF_E_INVALID_DWARF);
+      return NULL;
+    };
+
+  const Elf_Data *d = attr->cu->dbg->sectiondata[sec_index];
+  if (unlikely (d == NULL))
+    {
+    invalid:
+      __libdw_seterrno (err_nodata);
+      return NULL;
+    }
+
+  unsigned char *readp = d->d_buf + offset;
+  unsigned char *endp = d->d_buf + d->d_size;
+  if (readp >= endp)
+    goto invalid;
+
+  *endpp = endp;
+  return readp;
+}
 
 int
 dwarf_formudata (attr, return_uval)
@@ -77,11 +116,11 @@ dwarf_formudata (attr, return_uval)
       break;
 
     case DW_FORM_data4:
+      *return_uval = read_4ubyte_unaligned (attr->cu->dbg, attr->valp);
+      break;
+
     case DW_FORM_data8:
-      if (__libdw_read_address (attr->cu->dbg, IDX_debug_info, attr->valp,
-				attr->form == DW_FORM_data4 ? 4 : 8,
-				return_uval))
-	return -1;
+      *return_uval = read_8ubyte_unaligned (attr->cu->dbg, attr->valp);
       break;
 
     case DW_FORM_sdata:
