@@ -510,6 +510,11 @@ __libdw_read_begin_end_pair_inc (Dwarf *dbg, int sec_index,
 				 Dwarf_Addr *basep)
   internal_function;
 
+unsigned char *
+__libdw_read_udata_addr (Dwarf_Attribute *attr, int sec_index,
+			 int err_nodata, unsigned char **endpp)
+  internal_function;
+
 static inline int
 __libdw_read_address (Dwarf *dbg,
 		      int sec_index, const unsigned char *addr,
